# anyscribecli

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml
docs/building/: COMMIT_CHECKLIST.md  _index.md  architecture.md  downloaders.md  providers.md  web-ui-spec.md
docs/building/journal/: 2026-03-26-initial-architecture.md  2026-03-26-v020-full-feature-build.md  2026-03-27-v030-download-media-ux.md  2026-03-29-v031-documentation-accuracy-audit.md  2026-03-30-local-file-transcription.md  2026-03-30-v032-onboard-reconfig-ux.md  2026-03-30-v041-claude-code-skill.md  2026-03-30-v050-052-workspace-pypi-flatten.md  2026-03-31-v053-ytdlp-auto-update.md  2026-04-01-v054-windows-compatibility.md  2026-04-05-v060-scribe-rename-mcp.md  2026-04-16-v070-diarization-deepgram.md  2026-04-16-v072-config-set-keys-diarize-routing.md  2026-04-16-v0723-deepgram-hi-latn-nova-fallback.md  2026-04-18-language-picker-polish.md  2026-04-18-local-transcription-unified-setup.md  2026-04-18-menu-bar-tray-companion-plan.md  2026-04-18-provider-language-lists.md  2026-04-18-v0741-webui-settings-polish.md  2026-04-18-v081-onboarding-parity.md  2026-04-18-web-ui-initial.md  2026-04-20-v082-upload-autosubmit-fix.md  2026-04-29-instagram-yt-dlp-migration.md
docs/building/ops/: pypi-guide.md  release-checklist.md  whats-automated.md
docs/building/plans/: flatten-workspace-structure.md  v0.1.0-original-plan.md
docs/superpowers/plans/: 2026-04-29-instagram-yt-dlp-migration.md
docs/user/: commands.md  configuration.md  getting-started.md  providers.md
landing/: index.html
scripts/: release.sh
src/anyscribecli/: __init__.py  __main__.py
src/anyscribecli/cli/: batch.py  config_cmd.py  download.py  local_cmd.py  main.py  models_cmd.py  onboard.py  skill_cmd.py  transcribe.py
src/anyscribecli/config/: paths.py  settings.py
src/anyscribecli/core/: audio.py  checkpoint.py  deps.py  errors.py  fileutil.py  local_setup.py  migrate.py  onboard_headless.py  orchestrator.py  preflight.py  updater.py
src/anyscribecli/downloaders/: base.py  instagram.py  local_file.py  registry.py  youtube.py
src/anyscribecli/mcp/: __init__.py  server.py
src/anyscribecli/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py  languages.py  local.py  local_models.py  openai.py  openrouter.py  sargam.py
src/anyscribecli/skill/: SKILL.md
src/anyscribecli/skill/references/: commands.md  config.md  providers.md  troubleshooting.md
src/anyscribecli/vault/: index.py  scaffold.py  writer.py
src/anyscribecli/web/: __init__.py  app.py  jobs.py  models.py  progress.py
src/anyscribecli/web/routes/: config.py  health.py  history.py  local.py  models.py  onboarding.py  system.py  transcribe.py
src/anyscribecli/web/static/: index.html
src/anyscribecli/web/static/assets/: index-7XBC-WCZ.css  index-BBivdvoT.js  index-BJ5ERWK8.js  index-Bp6LsWTQ.css  index-C6sJLuR3.css  index-CFTR6Zv4.css  index-CHp8Pjxs.css  index-CIKEe8-v.js  index-CLjn1CNm.js  index-CX_iKA09.css  index-CXt6OZwQ.css  index-CgqqU3Ac.js  index-CifmOiXp.css  index-CoE0buqg.css  index-CpxPKD3V.js  index-CxLJroK3.js  index-D0b7UYaR.js  index-D5eQobGG.js  index-D6ECED4e.js  index-D6a59JB6.css  index-DKOOtI-M.js  index-DTPyO2IX.js  index-DeN52ElY.css  index-Dip160GZ.js  index-Ds6fcF68.js  index-Ke0-MPLT.css  index-KjxPAD9g.js  index-pz6iXVgo.css
tests/: test_audio.py  test_checkpoint.py  test_errors.py  test_fileutil.py  test_instagram_downloader.py  test_instagram_settings_migration.py  test_local_cli.py  test_local_models.py  test_local_setup.py  test_onboard_agent_cli.py  test_onboard_headless.py  test_preflight.py  test_web.py  test_web_local.py  test_web_onboarding.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  types.ts
ui/src/components/: LanguageInput.tsx  Layout.tsx  LocalSetupModal.tsx  Modal.tsx  OnboardingWizard.tsx  ProgressTracker.tsx  ResultCard.tsx  SetupBanner.tsx  URLInput.tsx
ui/src/hooks/: useJob.ts
ui/src/pages/: HistoryPage.tsx  SettingsPage.tsx  TranscribePage.tsx  TranscriptView.tsx
∕Users∕rish∕.anyscribecli∕tmp∕tmpt3xsc8sh∕ig_C17LiBLyIOe/: 2024-01-10_15-29-21_UTC.json.xz  2024-01-10_15-29-21_UTC.txt
