[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyscribecli"
version = "0.1.0"
description = "CLI tool to download, transcribe, and convert video/audio to structured markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "yt-dlp>=2024.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
instagram = [
    "instaloader>=4.10",
]

[project.scripts]
ascli = "anyscribecli.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/anyscribecli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
